--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
     tailwind.config = {
+      darkMode: 'class',
       theme: {
         extend: {
           colors: {
@@ -36,7 +37,7 @@
 }
 </script>
 </head>
-  <body class="bg-gcs-background font-sans">
+  <body class="bg-gcs-background font-sans dark:bg-gcs-dark">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
